--- a/HYNewNest/Features(主代码)/NewbieMissionComponent/Controller/BYNewbieMissionVC.xib
+++ b/HYNewNest/Features(主代码)/NewbieMissionComponent/Controller/BYNewbieMissionVC.xib
@@ -482,20 +482,20 @@
                                                                     <nil key="highlightedColor"/>
                                                                 </label>
                                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="3USDT" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Vh2-ob-8vU">
-                                                                    <rect key="frame" x="16" y="73.666666666666629" width="40" height="17"/>
+                                                                    <rect key="frame" x="16" y="80.333333333333371" width="40" height="17"/>
                                                                     <fontDescription key="fontDescription" name="PingFangSC-Semibold" family="PingFang SC" pointSize="12"/>
                                                                     <color key="textColor" red="0.062745098039215685" green="0.043137254901960784" blue="0.12941176470588234" alpha="1" colorSpace="calibratedRGB"/>
                                                                     <nil key="highlightedColor"/>
                                                                 </label>
                                                                 <imageView hidden="YES" clipsSubviews="YES" userInteractionEnabled="NO" tag="200" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="gou" translatesAutoresizingMaskIntoConstraints="NO" id="6ne-Wc-Lj4">
-                                                                    <rect key="frame" x="25" y="90.666666666666629" width="22" height="23"/>
+                                                                    <rect key="frame" x="25" y="97.333333333333371" width="22" height="23"/>
                                                                 </imageView>
                                                             </subviews>
                                                             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                             <constraints>
                                                                 <constraint firstAttribute="trailing" secondItem="emt-Ue-Nz3" secondAttribute="trailing" id="2Yd-Sq-UuF"/>
                                                                 <constraint firstItem="6ne-Wc-Lj4" firstAttribute="centerX" secondItem="Vh2-ob-8vU" secondAttribute="centerX" id="86w-et-brH"/>
-                                                                <constraint firstItem="Vh2-ob-8vU" firstAttribute="top" secondItem="emt-Ue-Nz3" secondAttribute="bottom" id="Bdi-cd-xer"/>
+                                                                <constraint firstItem="Vh2-ob-8vU" firstAttribute="top" secondItem="f7r-OC-KPx" secondAttribute="bottom" constant="5" id="Bdi-cd-xer"/>
                                                                 <constraint firstAttribute="trailing" secondItem="f7r-OC-KPx" secondAttribute="trailing" id="LeP-sc-mqT"/>
                                                                 <constraint firstItem="f7r-OC-KPx" firstAttribute="leading" secondItem="STA-uM-uMQ" secondAttribute="leading" id="LxN-Yf-USK"/>
                                                                 <constraint firstItem="emt-Ue-Nz3" firstAttribute="top" secondItem="STA-uM-uMQ" secondAttribute="top" constant="20" id="XL7-78-iZT"/>
@@ -529,10 +529,10 @@
                                                                     <nil key="highlightedColor"/>
                                                                 </label>
                                                                 <imageView hidden="YES" clipsSubviews="YES" userInteractionEnabled="NO" tag="201" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="gou" translatesAutoresizingMaskIntoConstraints="NO" id="fJC-AR-XwF">
-                                                                    <rect key="frame" x="25.333333333333343" y="91" width="22" height="23"/>
+                                                                    <rect key="frame" x="25.333333333333343" y="98" width="22" height="23"/>
                                                                 </imageView>
                                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="5USDT" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Cq8-Yc-r3I">
-                                                                    <rect key="frame" x="16.333333333333343" y="74" width="40" height="17"/>
+                                                                    <rect key="frame" x="16.333333333333343" y="81" width="40" height="17"/>
                                                                     <fontDescription key="fontDescription" name="PingFangSC-Semibold" family="PingFang SC" pointSize="12"/>
                                                                     <color key="textColor" red="0.062745098040000002" green="0.043137254899999998" blue="0.12941176469999999" alpha="1" colorSpace="calibratedRGB"/>
                                                                     <nil key="highlightedColor"/>
@@ -543,7 +543,7 @@
                                                                 <constraint firstItem="Cq8-Yc-r3I" firstAttribute="centerX" secondItem="CH7-rV-Hpk" secondAttribute="centerX" id="CDA-et-x2F"/>
                                                                 <constraint firstItem="CH7-rV-Hpk" firstAttribute="leading" secondItem="j9M-bD-Plb" secondAttribute="leading" id="CfD-Ox-yFr"/>
                                                                 <constraint firstItem="7BQ-X3-59B" firstAttribute="leading" secondItem="j9M-bD-Plb" secondAttribute="leading" id="PbG-kL-TqF"/>
-                                                                <constraint firstItem="Cq8-Yc-r3I" firstAttribute="top" secondItem="7BQ-X3-59B" secondAttribute="bottom" id="RUg-SW-kIf"/>
+                                                                <constraint firstItem="Cq8-Yc-r3I" firstAttribute="top" secondItem="CH7-rV-Hpk" secondAttribute="bottom" constant="5" id="RUg-SW-kIf"/>
                                                                 <constraint firstItem="CH7-rV-Hpk" firstAttribute="top" secondItem="j9M-bD-Plb" secondAttribute="top" id="eGC-QD-WED"/>
                                                                 <constraint firstAttribute="trailing" secondItem="7BQ-X3-59B" secondAttribute="trailing" id="fek-fs-t12"/>
                                                                 <constraint firstItem="fJC-AR-XwF" firstAttribute="centerX" secondItem="CH7-rV-Hpk" secondAttribute="centerX" id="oW4-Zj-5qg"/>
@@ -576,10 +576,10 @@
                                                                     <nil key="highlightedColor"/>
                                                                 </label>
                                                                 <imageView hidden="YES" clipsSubviews="YES" userInteractionEnabled="NO" tag="202" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="gou" translatesAutoresizingMaskIntoConstraints="NO" id="8Lh-Cf-u2O">
-                                                                    <rect key="frame" x="25.333333333333371" y="93" width="22" height="23"/>
+                                                                    <rect key="frame" x="25.333333333333371" y="98" width="22" height="23"/>
                                                                 </imageView>
-                                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="15USDT" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6ER-v1-WHu">
-                                                                    <rect key="frame" x="14" y="76" width="45" height="17"/>
+                                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="10USDT" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6ER-v1-WHu">
+                                                                    <rect key="frame" x="14" y="81" width="45" height="17"/>
                                                                     <fontDescription key="fontDescription" name="PingFangSC-Semibold" family="PingFang SC" pointSize="12"/>
                                                                     <color key="textColor" red="0.062745098040000002" green="0.043137254899999998" blue="0.12941176469999999" alpha="1" colorSpace="calibratedRGB"/>
                                                                     <nil key="highlightedColor"/>
@@ -595,7 +595,7 @@
                                                                 <constraint firstAttribute="trailing" secondItem="7Jd-vh-PYD" secondAttribute="trailing" id="DlV-yr-8pm"/>
                                                                 <constraint firstItem="8Lh-Cf-u2O" firstAttribute="top" secondItem="6ER-v1-WHu" secondAttribute="bottom" id="Gg1-0j-XPz"/>
                                                                 <constraint firstItem="6ER-v1-WHu" firstAttribute="centerX" secondItem="7Jd-vh-PYD" secondAttribute="centerX" id="Xbk-ow-iti"/>
-                                                                <constraint firstItem="6ER-v1-WHu" firstAttribute="top" secondItem="zAB-fz-a9k" secondAttribute="bottom" id="cEy-Dz-HHZ"/>
+                                                                <constraint firstItem="6ER-v1-WHu" firstAttribute="top" secondItem="7Jd-vh-PYD" secondAttribute="bottom" constant="5" id="cEy-Dz-HHZ"/>
                                                                 <constraint firstItem="8Lh-Cf-u2O" firstAttribute="centerX" secondItem="7Jd-vh-PYD" secondAttribute="centerX" id="eqH-g9-YLN"/>
                                                             </constraints>
                                                         </view>
