--- a/HYNewNest/Features(主代码)/NewbieMissionComponent/Controller/BYNewbieMissionVC.xib
+++ b/HYNewNest/Features(主代码)/NewbieMissionComponent/Controller/BYNewbieMissionVC.xib
@@ -285,8 +285,12 @@
                                                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Ic7-ja-4Fn">
                                                             <rect key="frame" x="239" y="0.0" width="61" height="124"/>
                                                             <subviews>
-                                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="sc-1" translatesAutoresizingMaskIntoConstraints="NO" id="6SP-zc-2Kr">
+                                                                <imageView clipsSubviews="YES" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="sc-1" translatesAutoresizingMaskIntoConstraints="NO" id="6SP-zc-2Kr">
                                                                     <rect key="frame" x="0.0" y="0.0" width="61" height="61"/>
+                                                                    <gestureRecognizers/>
+                                                                    <connections>
+                                                                        <outletCollection property="gestureRecognizers" destination="gua-E2-MSF" appends="YES" id="Vgb-aO-fC3"/>
+                                                                    </connections>
                                                                 </imageView>
                                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="首存≥15USDT" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9aF-7F-bhw">
                                                                     <rect key="frame" x="-8.3333333333333144" y="65.999999999999943" width="77.666666666666671" height="17"/>
@@ -920,14 +924,14 @@
                                                 </userDefinedRuntimeAttribute>
                                             </userDefinedRuntimeAttributes>
                                         </label>
-                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vla-HH-wuB" customClass="BYGradientButton">
+                                        <button opaque="NO" contentMode="scaleToFill" enabled="NO" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vla-HH-wuB" customClass="BYGradientButton">
                                             <rect key="frame" x="221" y="293" width="117" height="44"/>
                                             <color key="backgroundColor" systemColor="systemPinkColor"/>
                                             <constraints>
                                                 <constraint firstAttribute="height" constant="44" id="e8u-Ht-FkJ"/>
                                             </constraints>
                                             <fontDescription key="fontDescription" name="PingFangSC-Semibold" family="PingFang SC" pointSize="18"/>
-                                            <state key="normal" title="VIP私享会 ">
+                                            <state key="normal" title="领88USDT">
                                                 <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                             </state>
                                             <userDefinedRuntimeAttributes>
@@ -1023,10 +1027,10 @@
                                             <state key="normal" title="领38USDT"/>
                                             <userDefinedRuntimeAttributes>
                                                 <userDefinedRuntimeAttribute type="color" keyPath="startColor">
-                                                    <color key="value" red="0.74117647060000003" green="0.74117647060000003" blue="0.87450980389999999" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                                    <color key="value" red="1" green="0.46666666666666667" blue="0.46666666666666667" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                                 </userDefinedRuntimeAttribute>
                                                 <userDefinedRuntimeAttribute type="color" keyPath="endColor">
-                                                    <color key="value" red="0.4549019608" green="0.45882352939999999" blue="0.61176470589999998" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                                    <color key="value" red="0.74117647058823533" green="0.0" blue="0.3529411764705882" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                                 </userDefinedRuntimeAttribute>
                                                 <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
                                                     <real key="value" value="22"/>
@@ -1047,10 +1051,10 @@
                                             <state key="normal" title="领18USDT"/>
                                             <userDefinedRuntimeAttributes>
                                                 <userDefinedRuntimeAttribute type="color" keyPath="startColor">
-                                                    <color key="value" red="0.74117647058823533" green="0.74117647058823533" blue="0.87450980392156863" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                                    <color key="value" red="1" green="0.46666666666666667" blue="0.46666666666666667" alpha="1" colorSpace="calibratedRGB"/>
                                                 </userDefinedRuntimeAttribute>
                                                 <userDefinedRuntimeAttribute type="color" keyPath="endColor">
-                                                    <color key="value" red="0.45490196078431372" green="0.45882352941176469" blue="0.61176470588235299" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                                    <color key="value" red="0.74117647058823533" green="0.0" blue="0.3529411764705882" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                                 </userDefinedRuntimeAttribute>
                                                 <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
                                                     <real key="value" value="22"/>
@@ -1094,23 +1098,11 @@
                                         <constraint firstItem="1Lj-YZ-TqZ" firstAttribute="centerX" secondItem="KTU-io-kqF" secondAttribute="centerX" id="zty-Fc-9y7"/>
                                     </constraints>
                                 </view>
-                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="GAq-2v-s9S">
-                                    <rect key="frame" x="336" y="302" width="54" height="40"/>
-                                    <constraints>
-                                        <constraint firstAttribute="width" constant="54" id="R96-PG-y8K"/>
-                                        <constraint firstAttribute="height" constant="40" id="WOl-24-eyg"/>
-                                    </constraints>
-                                    <state key="normal" backgroundImage="gz"/>
-                                    <connections>
-                                        <action selector="ruleButtonClicked:" destination="-1" eventType="touchUpInside" id="aMP-VM-P4v"/>
-                                    </connections>
-                                </button>
                             </subviews>
                             <color key="backgroundColor" red="0.066666666666666666" green="0.027450980392156862" blue="0.13333333333333333" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                             <constraints>
                                 <constraint firstItem="qHg-ZS-cwF" firstAttribute="bottom" secondItem="ZMT-b6-wdK" secondAttribute="bottom" constant="18" id="2ET-zZ-mqT"/>
                                 <constraint firstItem="ZMT-b6-wdK" firstAttribute="top" secondItem="O6v-oO-xSE" secondAttribute="top" id="7L6-hP-pVf"/>
-                                <constraint firstAttribute="trailing" secondItem="GAq-2v-s9S" secondAttribute="trailing" id="E3Y-Jf-rkT"/>
                                 <constraint firstItem="aj2-53-mSb" firstAttribute="leading" secondItem="O6v-oO-xSE" secondAttribute="leading" constant="15" id="HAx-qC-qJ5"/>
                                 <constraint firstItem="aj2-53-mSb" firstAttribute="top" secondItem="qHg-ZS-cwF" secondAttribute="bottom" constant="40" id="Ibe-aB-lWc"/>
                                 <constraint firstAttribute="trailing" secondItem="qHg-ZS-cwF" secondAttribute="trailing" id="OQ5-pI-zrO"/>
@@ -1130,7 +1122,6 @@
                                 <constraint firstItem="ZJ4-cH-wly" firstAttribute="top" secondItem="9Dl-DT-5pt" secondAttribute="bottom" constant="40" id="r54-Da-Chp"/>
                                 <constraint firstItem="9Dl-DT-5pt" firstAttribute="top" secondItem="aj2-53-mSb" secondAttribute="bottom" constant="40" id="um8-yK-dKP"/>
                                 <constraint firstItem="ZJ4-cH-wly" firstAttribute="leading" secondItem="9Dl-DT-5pt" secondAttribute="leading" id="whd-dH-SCh"/>
-                                <constraint firstItem="GAq-2v-s9S" firstAttribute="top" secondItem="qHg-ZS-cwF" secondAttribute="bottom" constant="20" id="xEx-8V-1fP"/>
                             </constraints>
                         </view>
                     </subviews>
@@ -1143,6 +1134,17 @@
                         <constraint firstItem="O6v-oO-xSE" firstAttribute="top" secondItem="feH-iO-hb2" secondAttribute="top" id="p2u-nA-VAc"/>
                     </constraints>
                 </scrollView>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="GAq-2v-s9S">
+                    <rect key="frame" x="336" y="346" width="54" height="40"/>
+                    <constraints>
+                        <constraint firstAttribute="width" constant="54" id="R96-PG-y8K"/>
+                        <constraint firstAttribute="height" constant="40" id="WOl-24-eyg"/>
+                    </constraints>
+                    <state key="normal" backgroundImage="gz"/>
+                    <connections>
+                        <action selector="ruleButtonClicked:" destination="-1" eventType="touchUpInside" id="aMP-VM-P4v"/>
+                    </connections>
+                </button>
             </subviews>
             <viewLayoutGuide key="safeArea" id="Q5M-cg-NOt"/>
             <color key="backgroundColor" red="0.13725490196078433" green="0.13725490196078433" blue="0.25098039215686274" alpha="1" colorSpace="calibratedRGB"/>
@@ -1151,12 +1153,19 @@
                 <constraint firstItem="feH-iO-hb2" firstAttribute="top" secondItem="Q5M-cg-NOt" secondAttribute="top" id="Edx-kP-P1c"/>
                 <constraint firstItem="Q5M-cg-NOt" firstAttribute="bottom" secondItem="feH-iO-hb2" secondAttribute="bottom" id="VQJ-9Y-nzd"/>
                 <constraint firstItem="Q5M-cg-NOt" firstAttribute="trailing" secondItem="feH-iO-hb2" secondAttribute="trailing" id="lcb-p5-cdz"/>
+                <constraint firstItem="GAq-2v-s9S" firstAttribute="centerY" secondItem="i5M-Pr-FkT" secondAttribute="centerY" constant="-56" id="sC1-Dg-H6K"/>
+                <constraint firstItem="Q5M-cg-NOt" firstAttribute="trailing" secondItem="GAq-2v-s9S" secondAttribute="trailing" id="yrZ-np-f7J"/>
             </constraints>
             <point key="canvasLocation" x="133.33333333333334" y="150.66964285714286"/>
         </view>
         <tapGestureRecognizer id="ngn-LB-YJK">
             <connections>
                 <action selector="bindingPhoneClicked:" destination="-1" id="4PH-1Q-ecC"/>
+            </connections>
+        </tapGestureRecognizer>
+        <tapGestureRecognizer id="gua-E2-MSF">
+            <connections>
+                <action selector="firstRechargeClicked:" destination="-1" id="xvf-GE-Ocj"/>
             </connections>
         </tapGestureRecognizer>
     </objects>
